hide table after successful copy - ie reset the page

--- a/homeJS.html
+++ b/homeJS.html
@@ -99,7 +99,9 @@
             html: "Posts have been copied!"
         });
         $('#processing').hide();
-        //      resetForm()
+        document.getElementById("postTable").style.display = "none"
+        document.getElementById("noPosts").style.display = "none"
+        document.getElementById("newCourseDiv").style.display = "none"
     }
 
     function failure(e) {
