code related to announcements commented out

--- a/homePage.html
+++ b/homePage.html
@@ -18,7 +18,7 @@
       <div style="text-align: center;">
         <H5>Multi-schedule to Google Classroom</H5><br>
         You must schedule your post to one classroom first. Then chose your course from the dropdown. Any scheduled
-        assignments or announcements will show. Select which you want to repost, then select the Classrooms which they
+        assignments will show. Select which you want to repost, then select the Classrooms which they
         should be scheduled on.
       </div>
     </div><!--   close row ---->
